--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@font-face {
+  font-family: "AbrilFatface-Regular";
+  src: url("./fonts/AbrilFatface-Regular.ttf") format("truetype");
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  /* Weitere Angaben wie font-weight, font-style usw. können hier hinzugefügt werden */
+}
+@font-face {
+  font-family: "NotoSansArabic-Regular";
+  src: url("./fonts/NotoSansArabic-Regular.ttf") format("truetype");
+
+  /* Weitere Angaben wie font-weight, font-style usw. können hier hinzugefügt werden */
+}
+@font-face {
+  font-family: "Roboto-Light";
+  src: url("./fonts/Roboto-Light.ttf") format("truetype");
+
+  /* Weitere Angaben wie font-weight, font-style usw. können hier hinzugefügt werden */
+}
+body,
+#root {
+  font-family: "Roboto-Light", sans-serif;
+  height: 100vh;
+}
+.arabicFont {
+  font-family: "NotoSansArabic-Regular";
 }
